--- a/index.css
+++ b/index.css
@@ -13,18 +13,6 @@ body {
   background-color: azure;
 }
 
-.form-group {
-  margin: 0 auto 1.25rem auto;
-  padding: 0.25rem;
-}
-.form-control {
-  display: block;
-  width: 100%;
-  height: 2.375rem;
-  padding: 0.375rem 0.75rem;
-}
-
-
 #container {
   max-width: 70%;
   margin-block: 1.5rem;
@@ -37,4 +25,33 @@ body {
     #3f5efb,
     #fc466b
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+#survey-form div {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  margin: 0 auto 1.25rem auto;
+  padding: 0.25rem;
+}
+.form-control {
+  display: block;
+  width: 100%;
+  height: 2.375rem;
+  padding: 0.375rem 0.75rem;
+}
+.input-textarea {
+  min-height: 120px;
+  width: 100%;
+  padding: 0.625rem;
+}
+#submit {
+  display: block;
+  padding: 0.75rem;
+  color: inherit;
+  font-size: large;
+  background-color: green;
+  cursor: none;
 }
