--- a/index.css
+++ b/index.css
@@ -31,6 +31,16 @@ body {
   display: flex;
   flex-direction: column;
 }
+.header {
+  padding: 1rem;
+}
+.header h1 {
+  font-size: 2rem;
+  line-height: 2.6rem;
+}
+.header p {
+  font-size: 1rem;
+}
 
 .form-group {
   margin: 0 auto 1.25rem auto;
@@ -54,4 +64,7 @@ body {
   font-size: large;
   background-color: green;
   cursor: none;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 5px;
 }
